--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Shanghai
 
 title: Stoner Ling # the main title
 
-tagline: I think, therefore I am # it will display as the subtitle
+tagline: I think, therefore I am. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A blog about contemplation, essays, programming, mathematics, and vision.
