修复作者姓名不能正常显示的bug；添加数学公式支持标识。

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,4 @@
-<stoner>:
-  name: <Stoner Ling>
-  twitter: <twitter_of_author>
-  url: <stonerling.github.io>
+stoner:
+  name: Stoner Ling
+  twitter: twitter_of_author
+  url: stonerling.github.io
