--- a/_config.yml
+++ b/_config.yml
@@ -146,6 +146,8 @@ pwa:
     deny_paths:
       # - "/example"  # URLs match `<SITE_URL>/example/*` will not be cached by the PWA
 
+# plugins: jekyll-latex
+
 paginate: 10
 
 # The base URL of your site
