--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -6,6 +6,10 @@
 - type: twitter
   icon: "fa-brands fa-x-twitter"
 
+- type: zhihu
+  icon: "fa-brands fa-zhihu"
+  id: chen-qian-52-8
+
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
